--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -7,17 +7,6 @@ body {
 }
 div.container {
 	max-width: 1000px;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	align: center;
-}
-section.filters button {
-	font-size: 18px;
-	background-color: #FF5A5F;
-	color: #FFFFFF;
-	height: 48px;
-	width: 20%;
-	border: 0;
-	border-radius: 4px;
-	align: center;
+	margin: 30px auto;
+	text-align: center;
 }
