--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,14 +1,15 @@
+/*
 div.container {
 	max-width: 1000px;
 	margin: 30px auto;
 	text-align: center;
 }
-
+*/
 section.filters {
 	background-color: white;
 	height: 70px;
 	width: 100%;
-	border-color: 1px solid #DDDDDD;
+	border: 1px solid #DDDDDD;
 	border-radius: 4px;
 }
 
